--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Asteroids Part 1 </title>
+		<title>Asteroids Part 2.5 </title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Asteroids Game Part 1</h1>
+			<h1>Asteroids Game Part 2.5</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteroid.pde Bullet.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    W = accelerate | A = turn left | D = turn right | S = hyperspace
+		    W = accelerate | A = turn left | D = turn right | S = hyperspace | SPACE = shoot
 	    </footer>
 	</body>
 </html>
